// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rawproto > Some missing fields 1`] = `
[
  {
    "1": {
      "data": [
        1,
        2,
        3,
        4,
        5,
      ],
      "type": "Buffer",
    },
  },
  {
    "2": 1,
  },
  {
    "3": "hello",
  },
  {
    "4": {
      "data": [
        8,
        1,
        18,
        4,
        99,
        111,
        111,
        108,
        26,
        2,
        8,
        1,
      ],
      "type": "Buffer",
    },
  },
  {
    "4": [
      {
        "1": 2,
      },
      {
        "2": "awesome",
      },
      {
        "3": [
          {
            "1": 2,
          },
        ],
      },
    ],
  },
  {
    "4": {
      "data": [
        8,
        3,
        18,
        4,
        110,
        101,
        97,
        116,
        26,
        2,
        8,
        3,
      ],
      "type": "Buffer",
    },
  },
  {
    "5": "this one is extra",
  },
]
`;

exports[`rawproto > Test raw 1`] = `
[
  {
    "1": {
      "data": [
        1,
        2,
        3,
        4,
        5,
      ],
      "type": "Buffer",
    },
  },
  {
    "2": 1,
  },
  {
    "3": "hello",
  },
  {
    "4": [
      {
        "1": 1,
      },
      {
        "2": "cool",
      },
      {
        "3": [
          {
            "1": 1,
          },
        ],
      },
    ],
  },
  {
    "4": [
      {
        "1": 2,
      },
      {
        "2": "awesome",
      },
      {
        "3": [
          {
            "1": 2,
          },
        ],
      },
    ],
  },
  {
    "4": [
      {
        "1": 3,
      },
      {
        "2": "neat",
      },
      {
        "3": [
          {
            "1": 3,
          },
        ],
      },
    ],
  },
]
`;

exports[`rawproto > Test2 raw 1`] = `
[
  {
    "1": {
      "data": [
        1,
        2,
        3,
        4,
        5,
      ],
      "type": "Buffer",
    },
  },
  {
    "2": 1,
  },
  {
    "3": "hello",
  },
  {
    "4": [
      {
        "1": 1,
      },
      {
        "2": "cool",
      },
      {
        "3": [
          {
            "1": 1,
          },
        ],
      },
    ],
  },
  {
    "4": [
      {
        "1": 2,
      },
      {
        "2": "awesome",
      },
      {
        "3": [
          {
            "1": 2,
          },
        ],
      },
    ],
  },
  {
    "4": [
      {
        "1": 3,
      },
      {
        "2": "neat",
      },
      {
        "3": [
          {
            "1": 3,
          },
        ],
      },
    ],
  },
  {
    "5": "this one is extra",
  },
]
`;

exports[`rawproto > getProto 1`] = `
"syntax = \\"proto3\\";

message MessageRoot {
  bytes field1 = 1; // could be a repeated-value, string, bytes, or malformed sub-message
  int32 field2 = 2; // could be a int32, int64, uint32, bool, enum, etc, or even a float of some kind
  string field3 = 3; // could be a repeated-value, string, bytes, or malformed sub-message
  bytes field4 = 4; // could be a repeated-value, string, bytes, or malformed sub-message

  message 4 {
    int32 field1 = 1; // could be a int32, int64, uint32, bool, enum, etc, or even a float of some kind
    string field2 = 2; // could be a repeated-value, string, bytes, or malformed sub-message

    message 3 {
      int32 field1 = 1; // could be a int32, int64, uint32, bool, enum, etc, or even a float of some kind
    }
    
    Message3 subMessage3 = 3;
  }
  
  Message4 subMessage4 = 4;
  bytes field4 = 4; // could be a repeated-value, string, bytes, or malformed sub-message
  string field5 = 5; // could be a repeated-value, string, bytes, or malformed sub-message
}"
`;
